# AgentMesh

./: .gitignore  README.md  check_test.py  docker-compose.yml  vercel.json
backend/: .env.example  agent_config.yaml  agent_config.yaml.example  main.py  pyproject.toml  requirements.txt  ruff.toml
backend/agents/: pipeline.py
backend/agents/assessment/: agent.py  band_runner.py  logic.py  prompts.py  rag.py
backend/agents/firewall/: agent.py  band_runner.py  engine.py
backend/agents/intake/: agent.py  band_runner.py  langchain_tools.py  prompts.py  tools.py
backend/agents/payout/: agent.py  band_runner.py  prompts.py
backend/api/routes/: claims.py  decision_log.py
backend/band/: client.py  config.py
backend/data/: naic_regulations.md  novacover_policy.md
backend/database/: session.py
backend/decision_log/: audit_log.json  logger.py
backend/mesh_platform/: client.py  settings.py
backend/models/: claim.py  claim_record.py  schemas.py
backend/scripts/: ingest_rag.py  start_agents.py
backend/shared/: llm.py
backend/tests/: conftest.py
backend/tests/e2e/: test_claim_pipeline.py
backend/tests/integration/: test_band_workflow.py
backend/tests/unit/: test_assessment.py  test_assessment_rag.py  test_firewall.py  test_intake_tools.py  test_payout.py  (+1 more)
claimguard-zeineb/: .env.example  .gitignore  README.md  pyproject.toml
claimguard-zeineb/data/: mock_policies.json
claimguard-zeineb/shared/: llm.py  schemas.py
claimguard-zeineb/tests/: test_assessment_rag.py  test_e2e_local.py  test_firewall.py  test_intake_tools.py  test_schemas.py
(+52 files in other folders)
